force-app/main/default/objects/Registration__c/Registration__c.object-meta.xml
<CustomObject>
    <label>Registration</label>
    <pluralLabel>Registrations</pluralLabel>
    <nameField>
        <displayFormat>REG-{0000}</displayFormat>
        <label>Registration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>Player season registration information</description>
</CustomObject>