force-app/main/default/objects/Registration__c/fields/Division_Preference__c.field-meta.xml
<CustomField>
    <fullName>Division_Preference__c</fullName>
    <label>Division Preference</label>
    <type>Lookup</type>
    <referenceTo>Division__c</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <description>The preferred division for this registration</description>
</CustomField>