force-app/main/default/objects/Registration__c/fields/Medical_Form_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Medical_Form_Submitted__c</fullName>
    <label>Medical Form Submitted</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether medical form has been submitted</description>
</CustomField>