force-app/main/default/objects/Registration__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <label>Payment Amount</label>
    <type>Currency</type>
    <precision>8</precision>
    <scale>2</scale>
    <description>Registration payment amount</description>
</CustomField>