force-app/main/default/objects/Registration__c/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <label>Registration Date</label>
    <type>DateTime</type>
    <defaultValue>NOW()</defaultValue>
    <description>Date and time of registration</description>
</CustomField>