force-app/main/default/objects/Registration__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <label>Season</label>
    <type>Lookup</type>
    <referenceTo>Season__c</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The season for this registration</description>
</CustomField>